Find deployments by monitorUrl
