# swagger.json
@@ -168,6 +168,51 @@
           ]
         }
       }
+    },
+    "/v1/monitor/{clusterName}/{monitorUrl}": {
+      "get": {
+        "operationId": "getLatestForApplicationByMonitorUrl",
+        "summary": "Gets the latest deployment matching a URL encoded monitor url.",
+        "description": "Gets the latest deployment matching a URL encoded monitor url. curl -s -S --header 'Accept: application/json' --header 'api_key: abcd' 'https://api.kth.se/api/pipeline/v1/search/active/https%3A%2F%2Fapp.kth.se%2Fkopps%2F_monitor_core'",
+        "parameters": [
+          {
+            "name": "clusterName",
+            "in": "path",
+            "description": "Cluster name to get current deployments from (i.e: active, stage)",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "monitorUrl",
+            "in": "path",
+            "description": "Prefix string in query. Like '/news', or '/search'.",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "v1"
+        ],
+        "responses": {
+          "200": {
+            "description": "The requested data",
+            "schema": {
+              "$ref": "#/definitions/Data"
+            }
+          },
+          "default": {
+            "description": "Unexpected error",
+            "schema": {
+              "$ref": "#/definitions/Error"
+            }
+          }
+        },
+        "security": {
+          "api_key": [
+            "read"
+          ]
+        }
+      }
     }
   },
   "securityDefinitions": {
